leaving transition bug behind for now, updated netlify, added trailer and poster components

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 body {
   background-color: var(--primary);
-  color: var(--tertiary);
+  color: var(--secondary);
   font-family: "Helvetica Neue", sans-serif;
 }
 
@@ -30,20 +30,12 @@ body {
   max-width: 300px;
 }
 
-.card img.poster:hover {
-  opacity: 0.2;
-  transition: opacity 0.2s ease-in-out;
-}
 
 .card:focus-within,
 .card:hover {
-  scale: 1.1;
+  scale: 1.3;
   z-index: 100;
-  transition: 1s;
-}
 
-.poster:focus-within {
-  transition: opacity 0.55s ease-out;
 }
 
 .indicator-icon {
